# nimbus

./: .gitignore  README.md  pyproject.toml  run.nu  run.sh
nimbus/: __init__.py  alerts.py  config.py  main.py  morg.py  theme.py  weather.py  zahra.py
nimbus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nimbus/widgets/: __init__.py  companion.py  conditions.py  morg.py  sky.py
tests/: __init__.py  test_adapters.py  test_alerts.py  test_weather.py
