[project]
name = "nimbus"
version = "0.1.0"
description = "A beautiful Textual TUI weather app with Zahra and Morg."
authors = [{ name = "Zach", email = "zach@example.com" }]
dependencies = [
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
nimbus = "nimbus.main:run"

[tool.setuptools]
packages = ["nimbus", "nimbus.widgets"]

